fix: dark mode calendar style

--- a/src/modules/booking/components/event-calendar/event-calendar.scss
+++ b/src/modules/booking/components/event-calendar/event-calendar.scss
@@ -34,7 +34,7 @@
     }
 
     & .react-datepicker__header {
-      background-color: darkgray;
+      background-color: #474747;
     }
 
     & .react-datepicker__current-month,
@@ -45,7 +45,7 @@
     & .react-datepicker__day {
       color: white;
 
-      &:hover {
+      &:hover:not(.react-datepicker__day--disabled) {
         background-color: lightgray;
         color: black;
       }
@@ -55,6 +55,10 @@
       background-color: white;
       color: black;
       border-color: white;
+    }
+
+    & .react-datepicker__day--disabled {
+      color: dimgray;
     }
   }
 }
